--- a/templates/auth/password_reset_confirm.html
+++ b/templates/auth/password_reset_confirm.html
@@ -1,5 +1,11 @@
 {% extends "index.html" %}
 
+{% block head_meta %}<meta name="robots" content="nofollow" />{% endblock %}
+
+{% block meta_title %}Restore Password{% endblock %}
+{% block meta_description %}{% endblock %}
+{% block meta_keywords %}{% endblock %}
+
 {% block breadcrump %}
 <div class="breadcrumbs">
   <a href="{% url 'home' %}">Home</a>
@@ -11,10 +17,11 @@
 {% block sidebar_right %}
 <div id="layout-right" class="col-md-3 col-sm-12">
   <section class="sibebar-section">
-    <ul class="list-group">
-      <li class="list-group-item"><a href="{% url 'my-orders' %}">My orders</a></li>
-      <li class="list-group-item"><a href="{% url 'password-change' %}">Restore Password</a></li>
-    </ul>
+	<ul class="list-group">
+	  <li class="list-group-item"><a href="{% url 'login' %}">Log In</a></li>
+	  <li class="list-group-item"><a href="{% url 'registration' %}">Registration</a></li>
+	  <li class="list-group-item active"><a href="{% url 'forgot' %}">Restore Password</a></li>
+	</ul>
   </section>
 </div>
 {% endblock %}
@@ -22,10 +29,9 @@
 {% block content %}
   <!-- BEGIN MIDDLE LAYOUT -->
   <div id="layout-middle" class="col-md-9 col-sm-9">
-      <h1 class="page-title">Password reset verification.</h1>
+      <h1 class="page-title">Enter new password</h1>
       <div class="col-md-8 col-sm-8">
           {% if validlink %}
-            <h1>Enter new password</h1>
             <p>Please enter your new password twice so we can verify you typed it incorrectly.</p>
             <form action="" method="post">{% csrf_token %}
               {{ form.new_password1.errors }}
