--- a/templates/auth/password_reset_form.html
+++ b/templates/auth/password_reset_form.html
@@ -1,4 +1,11 @@
 {% extends "index.html" %}
+
+{% block head_meta %}<meta name="robots" content="nofollow" />{% endblock %}
+
+{% block meta_title %}Restore Password{% endblock %}
+{% block meta_description %}{% endblock %}
+{% block meta_keywords %}{% endblock %}
+
 {% load attr %}
 {% block breadcrump %}
 <div class="breadcrumbs">
@@ -11,10 +18,11 @@
 {% block sidebar_right %}
 <div id="layout-right" class="col-md-3 col-sm-12">
   <section class="sibebar-section">
-    <ul class="list-group">
-      <li class="list-group-item"><a href="{% url 'my-orders' %}">My orders</a></li>
-      <li class="list-group-item"><a href="{% url 'password-change' %}">Restore Password</a></li>
-    </ul>
+	<ul class="list-group">
+	  <li class="list-group-item"><a href="{% url 'login' %}">Log In</a></li>
+	  <li class="list-group-item"><a href="{% url 'registration' %}">Registration</a></li>
+	  <li class="list-group-item active"><a href="{% url 'forgot' %}">Restore Password</a></li>
+	</ul>
   </section>
 </div>
 {% endblock %}
