--- a/templates/pages/faq.html
+++ b/templates/pages/faq.html
@@ -1,5 +1,9 @@
 {% extends 'index.html' %}
 
+{% block meta_title %}Faq{% endblock %}
+{% block meta_description %}{% endblock %}
+{% block meta_keywords %}{% endblock %}
+
 {% block breadcrump %}
 <div class="breadcrumbs">
 	<a href="{% url 'home' %}">Home</a>
@@ -10,22 +14,24 @@
 			
 {% block content %}
 <!-- BEGIN MIDDLE LAYOUT -->
+
 <div id="layout-middle" class="col-md-9 col-sm-9 guarantees-page content-page">
 
 	<h1 class="page-title margin-top">Frequently Asked Questions</h1>
 	
 	<!-- BEGIN FAQ ACCORDION -->
 	<div class="panel-group" id="faq-accordion">
+		
 		<!-- Question 1 -->
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-1">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-1">
 				  How does the Custom Writing Service work?
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-1" class="panel-collapse collapse in">
+			<div id="question-1" class="panel-collapse collapse">
 			  <div class="panel-body">
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus tortor ut enim bibendum accumsan. Vestibulum mauris massa, mattis nec vestibulum ut, blandit ut lacus. Etiam tristique dignissim ultrices. Nullam porta tellus ac suscipit dignissim. Donec sagittis, lacus eu tincidunt lacinia, mi justo ornare sem, non rutrum lacus arcu nec tellus. Nullam aliquam metus sit amet libero consectetur, rutrum placerat turpis molestie.
 			  </div>
@@ -36,12 +42,12 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-2">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-2">
 				  Is your service confidential?
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-2" class="panel-collapse collapse">
+			<div id="question-2" class="panel-collapse collapse">
 			  <div class="panel-body">
 				Consectetur adipiscing elit. Donec faucibus tortor ut enim bibendum accumsan. Vestibulum mauris massa, mattis nec vestibulum ut, blandit ut lacus. Etiam tristique dignissim ultrices. Nullam porta tellus ac suscipit dignissim. Donec sagittis, lacus eu tincidunt lacinia, mi justo ornare sem, non rutrum lacus arcu nec tellus. Nullam aliquam metus sit amet libero consectetur, rutrum placerat turpis molestie.
 			  </div>
@@ -52,12 +58,12 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-3">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-3">
 				  Where are you located?
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-3" class="panel-collapse collapse">
+			<div id="question-3" class="panel-collapse collapse">
 			  <div class="panel-body">
 				EssayHave.com is a London-incorporated academic assistance company. We have been working with students from the United States,  UK, Canada and Australia since 2005 and are accepting online orders from any other countries all over the world. Our support office  facilities are located in Kiev, Ukraine.
 			  </div>
@@ -68,13 +74,13 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-4">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-4">
 				  How can I pay for the custom written paper?<br>
 				  Is it safe to submit payments through your site? 
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-4" class="panel-collapse collapse">
+			<div id="question-4" class="panel-collapse collapse">
 			  <div class="panel-body">
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus tortor ut enim bibendum accumsan. Vestibulum mauris massa, mattis nec vestibulum ut, blandit ut lacus. Etiam tristique dignissim ultrices. Nullam porta tellus ac suscipit dignissim. Donec sagittis, lacus eu tincidunt lacinia, mi justo ornare sem, non rutrum lacus arcu nec tellus. Nullam aliquam metus sit amet libero consectetur, rutrum placerat turpis molestie.
 			  </div>
@@ -85,12 +91,12 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-5">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-5">
 				  Why is the price so low/high?
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-5" class="panel-collapse collapse">
+			<div id="question-5" class="panel-collapse collapse">
 			  <div class="panel-body">
 				Vivamus ornare nibh quis purus hendrerit faucibus sit amet ac nisl. Nulla venenatis imperdiet enim, sit amet luctus nibh semper vel. Fusce ut nulla eu nisl cursus ullamcorper. Morbi erat ipsum, sodales sed rutrum quis, blandit at ipsum. Nullam vestibulum viverra sem, ac scelerisque turpis lacinia sed. Integer venenatis leo odio, eget mattis eros rhoncus lacinia
 			  </div>
@@ -101,12 +107,12 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-6">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-6">
 				  Is there a Money Back Guarantee?
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-6" class="panel-collapse collapse">
+			<div id="question-6" class="panel-collapse collapse">
 			  <div class="panel-body">
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec faucibus tortor ut enim bibendum accumsan. Vestibulum mauris massa, mattis nec vestibulum ut, blandit ut lacus. Etiam tristique dignissim ultrices. Nullam porta tellus ac suscipit dignissim. Donec sagittis, lacus eu tincidunt lacinia, mi justo ornare sem, non rutrum lacus arcu nec tellus. Nullam aliquam metus sit amet libero consectetur, rutrum placerat turpis molestie.
 			  </div>
@@ -117,12 +123,12 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-7">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-7">
 				  Who will write my custom paper?
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-7" class="panel-collapse collapse">
+			<div id="question-7" class="panel-collapse collapse">
 			  <div class="panel-body">
 				Consectetur adipiscing elit. Donec faucibus tortor ut enim bibendum accumsan. Vestibulum mauris massa, mattis nec vestibulum ut, blandit ut lacus. Etiam tristique dignissim ultrices. Nullam porta tellus ac suscipit dignissim. Donec sagittis, lacus eu tincidunt lacinia, mi justo ornare sem, non rutrum lacus arcu nec tellus. Nullam aliquam metus sit amet libero consectetur, rutrum placerat turpis molestie.
 			  </div>
@@ -133,12 +139,12 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-8">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-8">
 				  Is there a possibility of plagiarism in completed order?
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-8" class="panel-collapse collapse">
+			<div id="question-8" class="panel-collapse collapse">
 			  <div class="panel-body">
 				Consectetur adipiscing elit. Donec faucibus tortor ut enim bibendum accumsan. Vestibulum mauris massa, mattis nec vestibulum ut, blandit ut lacus. Etiam tristique dignissim ultrices. Nullam porta tellus ac suscipit dignissim. Donec sagittis, lacus eu tincidunt lacinia, mi justo ornare sem, non rutrum lacus arcu nec tellus. Nullam aliquam metus sit amet libero consectetur, rutrum placerat turpis molestie.
 			  </div>
@@ -149,12 +155,12 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-9">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-9">
 				  Do you keep a database of pre-written essays?
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-9" class="panel-collapse collapse">
+			<div id="question-9" class="panel-collapse collapse">
 			  <div class="panel-body">
 				Donec faucibus tortor ut enim bibendum accumsan. Vestibulum mauris massa, mattis nec vestibulum ut, blandit ut lacus. Etiam tristique dignissim ultrices. Nullam porta tellus ac suscipit dignissim. Donec sagittis, lacus eu tincidunt lacinia, mi justo ornare sem, non rutrum lacus arcu nec tellus. Nullam aliquam metus sit amet libero consectetur, rutrum placerat turpis molestie.
 			  </div>
@@ -165,12 +171,12 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-10">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-10">
 				  What is the format of your custom essays?
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-10" class="panel-collapse collapse">
+			<div id="question-10" class="panel-collapse collapse">
 			  <div class="panel-body">
 				Donec faucibus tortor ut enim bibendum accumsan. Vestibulum mauris massa, mattis nec vestibulum ut, blandit ut lacus. Etiam tristique dignissim ultrices. Nullam porta tellus ac suscipit dignissim. Donec sagittis, lacus eu tincidunt lacinia, mi justo ornare sem, non rutrum lacus arcu nec tellus. Nullam aliquam metus sit amet libero consectetur, rutrum placerat turpis molestie.
 			  </div>
@@ -181,12 +187,12 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-11">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-11">
 				  When will my custom paper be done?
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-11" class="panel-collapse collapse">
+			<div id="question-11" class="panel-collapse collapse">
 			  <div class="panel-body">
 				Faucibus tortor ut enim bibendum accumsan. Vestibulum mauris massa, mattis nec vestibulum ut, blandit ut lacus. Etiam tristique dignissim ultrices. Nullam porta tellus ac suscipit dignissim. Donec sagittis, lacus eu tincidunt lacinia, mi justo ornare sem, non rutrum lacus arcu nec tellus. Nullam aliquam metus sit amet libero consectetur, rutrum placerat turpis molestie.
 			  </div>
@@ -197,12 +203,12 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-12">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-12">
 				  When will my custom paper be done?
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-12" class="panel-collapse collapse">
+			<div id="question-12" class="panel-collapse collapse">
 			  <div class="panel-body">
 				Tortor ut enim bibendum accumsan. Vestibulum mauris massa, mattis nec vestibulum ut, blandit ut lacus. Etiam tristique dignissim ultrices. Nullam porta tellus ac suscipit dignissim. Donec sagittis, lacus eu tincidunt lacinia, mi justo ornare sem, non rutrum lacus arcu nec tellus. Nullam aliquam metus sit amet libero consectetur, rutrum placerat turpis molestie.
 			  </div>
@@ -213,12 +219,12 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-13">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-13">
 				  What is Progressive Delivery service and how does it work? 
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-13" class="panel-collapse collapse">
+			<div id="question-13" class="panel-collapse collapse">
 			  <div class="panel-body">
 				Vestibulum mauris massa, mattis nec vestibulum ut, blandit ut lacus. Etiam tristique dignissim ultrices. Nullam porta tellus ac suscipit dignissim. Donec sagittis, lacus eu tincidunt lacinia, mi justo ornare sem, non rutrum lacus arcu nec tellus. Nullam aliquam metus sit amet libero consectetur, rutrum placerat turpis molestie.
 			  </div>
@@ -229,12 +235,12 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-14">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-14">
 				  How do I fill in the order form? 
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-14" class="panel-collapse collapse">
+			<div id="question-14" class="panel-collapse collapse">
 			  <div class="panel-body">
 				Mauris massa, mattis nec vestibulum ut, blandit ut lacus. Etiam tristique dignissim ultrices. Nullam porta tellus ac suscipit dignissim. Donec sagittis, lacus eu tincidunt lacinia, mi justo ornare sem, non rutrum lacus arcu nec tellus. Nullam aliquam metus sit amet libero consectetur, rutrum placerat turpis molestie.
 			  </div>
@@ -245,12 +251,12 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-15">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-15">
 				  How will I be able to send my case study/articles/materials to the writer? 
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-15" class="panel-collapse collapse">
+			<div id="question-15" class="panel-collapse collapse">
 			  <div class="panel-body">
 				Mauris massa, mattis nec vestibulum ut, blandit ut lacus. Etiam tristique dignissim ultrices. Nullam porta tellus ac suscipit dignissim. Donec sagittis, lacus eu tincidunt lacinia, mi justo ornare sem, non rutrum lacus arcu nec tellus. Nullam aliquam metus sit amet libero consectetur, rutrum placerat turpis molestie.
 			  </div>
@@ -261,12 +267,12 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-16">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-16">
 				  What is my Personal Order Page? How does it work? 
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-16" class="panel-collapse collapse">
+			<div id="question-16" class="panel-collapse collapse">
 			  <div class="panel-body">
 				Mauris massa, mattis nec vestibulum ut, blandit ut lacus. Etiam tristique dignissim ultrices. Nullam porta tellus ac suscipit dignissim. Donec sagittis, lacus eu tincidunt lacinia, mi justo ornare sem, non rutrum lacus arcu nec tellus. Nullam aliquam metus sit amet libero consectetur, rutrum placerat turpis molestie.
 			  </div>
@@ -277,12 +283,12 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-16">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-16">
 				  What if I forgot my password? 
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-16" class="panel-collapse collapse">
+			<div id="question-16" class="panel-collapse collapse">
 			  <div class="panel-body">
 				Mauris massa, mattis nec vestibulum ut, blandit ut lacus. Etiam tristique dignissim ultrices. Nullam porta tellus ac suscipit dignissim. Donec sagittis, lacus eu tincidunt lacinia, mi justo ornare sem, non rutrum lacus arcu nec tellus. Nullam aliquam metus sit amet libero consectetur, rutrum placerat turpis molestie.
 			  </div>
@@ -293,12 +299,12 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-16">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-16">
 				  How will I receive my paper? 
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-16" class="panel-collapse collapse">
+			<div id="question-16" class="panel-collapse collapse">
 			  <div class="panel-body">
 				Vestibulum ut, blandit ut lacus. Etiam tristique dignissim ultrices. Nullam porta tellus ac suscipit dignissim. Donec sagittis, lacus eu tincidunt lacinia, mi justo ornare sem, non rutrum lacus arcu nec tellus. Nullam aliquam metus sit amet libero consectetur, rutrum placerat turpis molestie.
 			  </div>
@@ -309,12 +315,12 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-16">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-16">
 				  How do I download printable Microsoft Word version?  
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-16" class="panel-collapse collapse">
+			<div id="question-16" class="panel-collapse collapse">
 			  <div class="panel-body">
 				Etiam tristique dignissim ultrices. Nullam porta tellus ac suscipit dignissim. Donec sagittis, lacus eu tincidunt lacinia, mi justo ornare sem, non rutrum lacus arcu nec tellus. Nullam aliquam metus sit amet libero consectetur, rutrum placerat turpis molestie.
 			  </div>
@@ -325,12 +331,12 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-20">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-20">
 				  I haven`t received my custom paper by the deadline. What should I do?   
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-20" class="panel-collapse collapse">
+			<div id="question-20" class="panel-collapse collapse">
 			  <div class="panel-body">
 				Nullam porta tellus ac suscipit dignissim. Donec sagittis, lacus eu tincidunt lacinia, mi justo ornare sem, non rutrum lacus arcu nec tellus. Nullam aliquam metus sit amet libero consectetur, rutrum placerat turpis molestie. Etiam tristique dignissim ultrices. 
 			  </div>
@@ -341,12 +347,12 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-21">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-21">
 				  What if I do not like my custom paper?   
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-21" class="panel-collapse collapse">
+			<div id="question-21" class="panel-collapse collapse">
 			  <div class="panel-body">
 				Porta tellus ac suscipit dignissim. Donec sagittis, lacus eu tincidunt lacinia, mi justo ornare sem, non rutrum lacus arcu nec tellus. Nullam aliquam metus sit amet libero consectetur, rutrum placerat turpis molestie. Etiam tristique dignissim ultrices. 
 			  </div>
@@ -357,12 +363,12 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">
 			  <h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion" href="#quetion-21">
+				<a data-toggle="collapse" data-parent="#accordion" href="#question-21">
 				  What is the samples service?   
 				</a>
 			  </h4>
 			</div>
-			<div id="quetion-21" class="panel-collapse collapse">
+			<div id="question-21" class="panel-collapse collapse">
 			  <div class="panel-body">
 				Porta tellus ac suscipit dignissim. Donec sagittis, lacus eu tincidunt lacinia, mi justo ornare sem, non rutrum lacus arcu nec tellus. Nullam aliquam metus sit amet libero consectetur, rutrum placerat turpis molestie. Etiam tristique dignissim ultrices. 
 			  </div>
