--- a/templates/pages/password-change.html
+++ b/templates/pages/password-change.html
@@ -1,10 +1,16 @@
 {% extends 'index.html' %}
 
+{% block head_meta %}<meta name="robots" content="nofollow" />{% endblock %}
+
+{% block meta_title %}Password change{% endblock %}
+{% block meta_description %}{% endblock %}
+{% block meta_keywords %}{% endblock %}
+
 {% block breadcrump %}
 <div class="breadcrumbs">
   <a href="{% url 'home' %}">Home</a>
   <span class="separator"><i class="fa fa-angle-right"></i></span>
-  <a href="{% url 'my-account' %}" class="active">My account</a>
+  <a href="{% url 'change' %}" class="active">Password change</a>
 </div>
 {% endblock %}
 
