--- a/templates/pages/service.html
+++ b/templates/pages/service.html
@@ -1,5 +1,9 @@
 {% extends 'index.html' %}
 
+{% block meta_title %}Service{% endblock %}
+{% block meta_description %}{% endblock %}
+{% block meta_keywords %}{% endblock %}
+
 {% block breadcrump %}
 <div class="breadcrumbs">
 	<a href="{% url 'home' %}">Home</a>
