--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,10 +1,16 @@
 {% extends 'index.html' %}
 
+{% block head_meta %}<meta name="robots" content="nofollow" />{% endblock %}
+
+{% block meta_title %}Login{% endblock %}
+{% block meta_description %}{% endblock %}
+{% block meta_keywords %}{% endblock %}
+
 {% block breadcrump %}
 <div class="breadcrumbs">
 	<a href="{% url 'home' %}">Home</a>
 	<span class="separator"><i class="fa fa-angle-right"></i></span>
-	<a href="{% url 'login' %}" class="active">Login</a>
+	<a href="{% url 'login' %}" rel="nofollow" class="active">Login</a>
 </div>
 {% endblock %}
 
@@ -12,9 +18,9 @@
 <div id="layout-right" class="col-md-3 col-sm-12">
   <section class="sibebar-section">
     <ul class="list-group">
-      <li class="list-group-item active"><a href="{% url 'login' %}">Log In</a></li>
-      <li class="list-group-item"><a href="{% url 'registration' %}">Registration</a></li>
-      <li class="list-group-item"><a href="{% url 'password-change' %}">Restore Password</a></li>
+      <li class="list-group-item active"><a href="{% url 'login' %}" rel="nofollow">Log In</a></li>
+      <li class="list-group-item"><a href="{% url 'registration' %}"  rel="nofollow">Registration</a></li>
+      <li class="list-group-item"><a href="{% url 'forgot' %}" rel="nofollow">Restore Password</a></li>
     </ul>
   </section>
 </div>
@@ -45,7 +51,7 @@
    </div>
    <div class="row">
     <div class="col-sm-8 col-md-offset-4 forgot-link">
-     <a href="{% url 'password-change' %}">Forget Password?</a>
+     <a href="{% url 'password-change' %}" rel="nofollow">Forget Password?</a>
     </div>
    </div>
    
