--- a/templates/auth/registration.html
+++ b/templates/auth/registration.html
@@ -1,5 +1,11 @@
 {% extends 'index.html' %}
 
+{% block head_meta %}<meta name="robots" content="nofollow" />{% endblock %}
+
+{% block meta_title %}Registration{% endblock %}
+{% block meta_description %}{% endblock %}
+{% block meta_keywords %}{% endblock %}
+
 {% block breadcrump %}
 <div class="breadcrumbs">
   <a href="{% url 'home' %}">Home</a>
@@ -14,7 +20,7 @@
     <ul class="list-group">
       <li class="list-group-item"><a href="{% url 'login' %}">Log In</a></li>
       <li class="list-group-item active"><a href="{% url 'registration' %}">Registration</a></li>
-      <li class="list-group-item"><a href="{% url 'password-change' %}">Restore Password</a></li>
+      <li class="list-group-item"><a href="{% url 'forgot' %}">Restore Password</a></li>
     </ul>
   </section>
 </div>
