--- a/templates/html/footer.html
+++ b/templates/html/footer.html
@@ -22,6 +22,30 @@
      </div>
     </div>
    </div>
+   
+  <div class="container links">
+    <div class="row">
+
+		<ul class="bottom_list" style="width:460px">
+			<li class="fifth"><a href="{% url 'terms-conditions' %}" class="more" rel="nofollow">Terms and Conditions</a></li>
+			<li class="fifth"><a href="{% url 'social-responsibility-notice' %}" rel="nofollow">Director's Notice On Social Responsibility</a></li>
+			<li class="fifth"><a href="{% url 'plagiarism-free-guarantee' %}" rel="nofollow">Plagiarism Free Guarantee</a></li>
+		</ul>
+
+		<ul class="bottom_list" style="width:350px">
+			<li class="fifth"><a href="{% url 'cookie-policy' %}" rel="nofollow">Cookie Policy</a></li>
+			<li class="fifth"><a href="{% url 'money-back-guarantee' %}" rel="nofollow">Money Back Guarantee</a></li>                 
+			<li class="fifth"><a href="{% url 'progressive-delivery' %}" rel="nofollow">Progressive Delivery</a></li>
+		</ul>
+
+		<ul class="bottom_list" style="width:180px">
+			<li class="fifth"><a href="{% url 'privacy-policy' %}" rel="nofollow">Privacy Policy</a></li>
+			<li class="fifth"><a href="{% url 'revisions-policy' %}" rel="nofollow">Revision Policy</a></li>
+			<li class="fifth"><a href="{% url 'disclaimer' %}" rel="nofollow">Disclaimer</a></li>
+		</ul>
+	
+    </div>
+   </div>
 
   <div id="copyright">
     <div class="container">
