--- a/templates/pages/my-account.html
+++ b/templates/pages/my-account.html
@@ -1,5 +1,11 @@
 {% extends 'index.html' %}
 
+{% block head_meta %}<meta name="robots" content="nofollow" />{% endblock %}
+
+{% block meta_title %}My account{% endblock %}
+{% block meta_description %}{% endblock %}
+{% block meta_keywords %}{% endblock %}
+
 {% block breadcrump %}
 <div class="breadcrumbs">
   <a href="{% url 'home' %}">Home</a>
