Added permissions and update password

--- a/templates/auth/password_reset_form.html
+++ b/templates/auth/password_reset_form.html
@@ -32,7 +32,7 @@
   <div id="layout-middle" class="col-md-9 col-sm-9">
       <h1 class="page-title">Forgot Your Password?</h1>
       <div class="col-md-8 col-sm-8">
-          <form action="{% url "password-change" %}" method="post" id="forgot-form" class="form-horizontal form-without-legend">
+          <form action="{% url "forgot" %}" method="post" id="forgot-form" class="form-horizontal form-without-legend">
               {% csrf_token %}
               <div class="form-group">
                   <label class="col-sm-4 control-label">Email</label>
